<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".reminders_activity.RemindersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timeTitleTextView"
            style="@style/bold_left_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x_margin"
            android:layout_marginTop="@dimen/y_margin"
            android:layout_marginEnd="@dimen/x_margin"
            android:text="@string/reminder_time_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeSubtitleTextView"
            style="@style/paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/reminder_time_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/timeTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/timeTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/timeTitleTextView" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:background="@drawable/form_background"
            android:timePickerMode="spinner"
            app:layout_constraintEnd_toEndOf="@+id/timeSubtitleTextView"
            app:layout_constraintStart_toStartOf="@+id/timeSubtitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/timeSubtitleTextView" />

        <TextView
            android:id="@+id/dayTitleTextView"
            style="@style/bold_left_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_padding"
            android:text="@string/reminder_day_title"
            app:layout_constraintEnd_toEndOf="@+id/timePicker"
            app:layout_constraintStart_toStartOf="@+id/timePicker"
            app:layout_constraintTop_toBottomOf="@+id/timePicker" />

        <TextView
            android:id="@+id/daySubtitleTextView"
            style="@style/paragraph"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/reminder_day_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/dayTitleTextView"
            app:layout_constraintStart_toStartOf="@+id/dayTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/dayTitleTextView" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dayPickerChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x_margin"
            app:layout_constraintEnd_toEndOf="@id/daySubtitleTextView"
            app:layout_constraintStart_toStartOf="@id/daySubtitleTextView"
            app:layout_constraintTop_toBottomOf="@id/daySubtitleTextView"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/sunday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/monday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/tuesday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/wednesday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/thursday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/friday" />

            <com.google.android.material.chip.Chip
                style="@style/day_chip"
                android:text="@string/saturday" />

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/saveButton"
            style="@style/accent_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@id/daySubtitleTextView"
            app:layout_constraintStart_toStartOf="@id/daySubtitleTextView"
            app:layout_constraintTop_toBottomOf="@id/dayPickerChipGroup" />

        <TextView
            android:id="@+id/skipTextView"
            style="@style/centered_caps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:layout_marginBottom="@dimen/double_padding"
            android:text="@string/no_thanks"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/daySubtitleTextView"
            app:layout_constraintStart_toStartOf="@id/daySubtitleTextView"
            app:layout_constraintTop_toBottomOf="@id/saveButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>