<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".sign_in_activity.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            style="@style/full_width_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sign_bg" />

        <TextView
            android:id="@+id/headerTextView"
            style="@style/bold_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/sign_in_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/facebookButton"
            style="@style/facebook_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/y_margin"
            android:layout_marginTop="@dimen/y_margin"
            android:layout_marginRight="@dimen/y_margin"
            android:paddingStart="@dimen/y_margin"
            android:text="@string/facebook"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleButton"
            style="@style/google_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:paddingStart="@dimen/y_margin"
            android:text="@string/google"
            app:icon="@drawable/ic_google"
            app:layout_constraintLeft_toLeftOf="@id/facebookButton"
            app:layout_constraintRight_toRightOf="@id/facebookButton"
            app:layout_constraintTop_toBottomOf="@id/facebookButton" />

        <TextView
            android:id="@+id/useEmailTextView"
            style="@style/centered_caps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/use_email"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/googleButton"
            app:layout_constraintStart_toStartOf="@id/googleButton"
            app:layout_constraintTop_toBottomOf="@id/googleButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/form_height"
            android:layout_marginTop="@dimen/y_margin"
            android:singleLine="true"
            app:endIconDrawable="@drawable/ic_okay"
            app:endIconMode="custom"
            app:endIconTint="@color/green"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/facebookButton"
            app:layout_constraintRight_toRightOf="@id/facebookButton"
            app:layout_constraintTop_toBottomOf="@id/useEmailTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/form_background"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="@dimen/form_height"
            android:layout_marginTop="@dimen/y_margin"
            android:singleLine="true"
            app:hintEnabled="false"
            app:layout_constraintLeft_toLeftOf="@id/facebookButton"
            app:layout_constraintRight_toRightOf="@id/facebookButton"
            app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
            app:passwordToggleDrawable="@drawable/selector_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/form_background"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logInButton"
            style="@style/accent_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="@id/facebookButton"
            app:layout_constraintStart_toStartOf="@id/facebookButton"
            app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_x_margin"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/dark"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/signUpDescTextView"
            app:layout_constraintEnd_toEndOf="@+id/logInButton"
            app:layout_constraintStart_toStartOf="@+id/logInButton"
            app:layout_constraintTop_toBottomOf="@id/logInButton" />

        <TextView
            android:id="@+id/signUpDescTextView"
            style="@style/centered_caps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y_margin"
            android:layout_marginBottom="@dimen/double_padding"
            android:text="@string/sign_up_desc"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logInButton"
            app:layout_constraintStart_toStartOf="@+id/logInButton"
            app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>